22 June 2004 Sylvain Pion
- Typo spotted by g++ 3.4.
- Add missing #include<> spotted by g++ 3.4.

20 June 2004 Sylvain Pion
- Change CGAL::is_finite to CGAL_NTS is_finite.

20 June 2004 Sylvain Pion
- Fix typos in un-instantiated code, spotted by g++ 3.4.

20 May 2004 Andreas Fabri
- split return typename K::Something_2 in a typedef typename K::Something_2
  Something; return Something (to please SunPro CC 5.3)

14 May 2004 Sylvain Pion
- sign_of_cross() : simplify code and remove warning.

17 April 2004 Andreas Fabri
- Global functions call functor

29 March 2004 Radu Ursu
- removed obsolete doc_tex directory

09 Mar 2004 Andreas Fabri
Replaced operator*(Vector,Vector), and operator*(Vector,NT) with functors

2.33 (02 Jan 2004) [rursu]
- fixed Ray_2_Triangle_2_intersection.h for gcc 3.4

2.32 (18 Jan 2004)
- Removed CGAL_CFG_RETURN_TYPE_BUG_2 workarounds.

2.31 (24 Nov 2003) [af]
- moved file include/CGAL/intersections.h to package Intersections_3

2.30 (21 October 2003)
- new header

2.29 (17 October 2003) [sp]
- Remove warning by re-ordering data members.

2.28 (7 October 2003) [af]
- Removed CGAL_CFG_NO_AUTOMATIC_TEMPLATE_INCLUSION
- Removed Circle_2_Circle_2_intersection.C

2.27 (4 October 2003) [af]
- Moved some code in Triangle_2_Triangle_2_do_intersect.h to CGALi and changed Triangle_2<K> to K::Triangle_2
- Added definitions from a .C file to .h file so that automatic header inclusion can work

2.26(26 September 2003) [af]
- Added maintainer

2.24 (23 September 2003) [af]
- Made the code independent from K::Point.x()/y()/dimension()

2.22 (10 September 2003)
- Specialised construct_if_finite for Cartesian and homogeneous kernels [af]

2.21 (7 September 2003)
- Replaced several global function calls with Kernel functors 
- Replaced start()/end() with source()/target() to reduce requirements on 
  member functions of classes R::Segment_2 and R::Ray_2

2.20 (2 September 2003)
- Towards an extensible kernel [af]

2.17 (10 August 2003)